tdf#149907 Update results when changing condition

Regression from d9dd003f63a781e63bfbe380ea737e080c21881f

Change-Id: I9373be1f77ba13049a91816f57c5ae6b8913f071
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181028
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>